# workmate_test_task

./: .coverage  Makefile  README.md  coverage.xml  demo.cast  main.py  pyproject.toml
tests/: test_main.py  test_processor.py  test_reporter.py
workmate/: cli.py  processor.py  reporter.py
workmate/reports/: average.py  base.py
