[tool.poetry]
name = "workmate"
version = "0.1.0"
description = ""
authors = ["akelaPro <ilya_chernov_2022@mail.ru>"]
readme = "README.md"
packages = [{include = "workmate"}]

[tool.poetry.dependencies]
python = "^3.12"
tabulate = "^0.9.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"


[tool.poetry.scripts]
log-analyzer = "workmate.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
